ekl-backend-ws/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ekl-backend-ws
spec:
  selector:
    matchLabels:
      app: ekl-backend-ws
  template:
    metadata:
      labels:
        app: ekl-backend-ws
    spec:
      containers:
        - name: ekl-backend-ws
          image: ekl-backend-ws
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /var/local/ekl-backend-ws/
              name: ekl-backend-ws-jks
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  progressDeadlineSeconds: 120
