ekl-backend-ws/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ekl-backend-ws
spec:
  selector:
    app: ekl-backend-ws
  ports:
    - port: 8443
      name: https
      targetPort: 8443
      protocol: TCP
