ekl-backend-ws/k8s/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ekl-backend-ws
spec:
  hosts:
    - ekl-backend-ws.ponyworld.io
  gateways:
    - ekl-backend-ws
